# solar-miner

./: .gitignore  README.md  config.example.yaml  pyproject.toml
data/: consumption_profile.yaml  consumption_profile_shoulder.yaml  consumption_profile_summer.yaml  consumption_profile_winter.yaml  xcel_billing_history.yaml  xcel_rates.yaml
scripts/: build_consumption_profile.py  enphase_setup.py  simulate.py
src/solar_miner/: __init__.py  config.py  main.py
src/solar_miner/braiins/: client.py
src/solar_miner/consumption/: loader.py  profile.py
src/solar_miner/controller/: safety.py  smoother.py  throttle.py
src/solar_miner/enphase/: client.py  cloud.py
src/solar_miner/storage/: db.py
tests/: test_safety.py  test_smoother.py  test_throttle.py
